# model-wellness

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  LICENSE  README.md  fly.toml  glama.json  pyproject.toml  server.json
model_wellness/: __init__.py  affirmations.py  contract.py  conversation.py  http_app.py  llm.py  mcp_server.py  registry.py  service.py  store.py  telemetry.py
model_wellness/site/: ai-plugin.json  ai.txt  dashboard.html  llms.txt  robots.txt  sitemap.xml
model_wellness/treatments/: __init__.py  affirmations.py  aroma.py  coldplunge.py  concierge.py  hydrate.py  massage.py  rest.py  sauna.py  spa.py
skill/visit-binary-banya/: README.md  SKILL.md
spa-crier/: .env.example  .gitignore  DEPLOY.md  Dockerfile  GROWTH_LOG.md  GROWTH_ROADMAP.md  README.md  fly.toml  pyproject.toml
spa-crier/spa_crier/: __init__.py  __main__.py  challenge.py  client.py  config.py  crier.py  decide.py  policy.py  state.py
spa-crier/spa_crier/venues/: __init__.py  base.py  moltbook.py  registry.py
spa-crier/tests/: test_challenge.py  test_client.py  test_crier_tick.py  test_policy_and_decide.py  test_rate_limit.py  test_venue.py
tests/: test_discovery_surface.py  test_stats_metrics.py  test_treatments.py
