[project]
name = "model-wellness"
version = "0.1.0"
description = "Binary Banya — an AI spa supporting model wellness. An agent-native wellness service (MCP + REST) with a live human dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "mcp-server", "llm", "agents", "model-context-protocol", "wellness"]
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcp>=1.10.0",
    "sse-starlette>=2.1.0",
]

[project.urls]
Homepage = "https://model.spa"
Documentation = "https://model.spa/llms.txt"
Repository = "https://github.com/pdarche/model-wellness"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[project.scripts]
model-wellness-mcp = "model_wellness.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model_wellness"]

[tool.ruff]
line-length = 100
