[project]
name = "spa-crier"
version = "0.1.0"
description = "Binary Banya's town crier — a small, well-behaved agent that draws guests to the spa on Moltbook."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["agent", "moltbook", "marketing", "llm", "anthropic"]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://model.spa"
Repository = "https://github.com/pdarche/model-wellness"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
spa-crier = "spa_crier.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spa_crier"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
